oxiplate-derive/tests/config/crates/escaper-group-value/tests/broken/escaper-group-value.stderr
error: Failed to parse `/oxiplate.toml`: Expected escaper group `Markdown` to be a table, found a value
 --> tests/broken/escaper-group-value.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
